Added tests for passing large content through web services in the IF/simple component